--- a/src/app/reports/market-report/market-report.component.html
+++ b/src/app/reports/market-report/market-report.component.html
@@ -1,32 +1,88 @@
-<div [formGroup]="filterFormGroup">
-  <input type="text" placeholder="element" formControlName="element" />
-  <input type="text" placeholder="min stars" formControlName="minStars" />
-  <input type="text" placeholder="min power" formControlName="minPower" />
-  <button (click)="submit()">submit</button>
+<div class="container">
+  <div class="alert alert-primary" role="alert">
+    HACK KO ACCOUNT MO OR DONATE MAMILI KA!, ETO ADDRESS
+    0x8b4c6CEf614740491B64D81Dc90C0E735Beb9e49!!
+  </div>
+  <div [formGroup]="filterFormGroup" class="form-group">
+    <div class="row">
+      <div class="col-sm-4">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="element"
+          formControlName="element"
+        />
+      </div>
+      <div class="col-sm-4">
+        <input
+          class="form-control"
+          placeholder="min stars"
+          formControlName="minStars"
+        />
+      </div>
+      <div class="col-sm-4">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="min power"
+          formControlName="minPower"
+        />
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <button class="btn btn-primary col-sm-3" (click)="submit()">
+        search
+      </button>
+    </div>
+  </div>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Price</th>
+        <th scope="col">Id</th>
+        <th scope="col">Element</th>
+        <th scope="col">Stars</th>
+        <th scope="col">Stat 1</th>
+        <th scope="col">Stat 2</th>
+        <th scope="col">Stat 3</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of results">
+        <td>{{ item.price }}</td>
+        <td>{{ item.weaponId }}</td>
+        <td>{{ item.weaponElement }}</td>
+        <td>{{ item.weaponStars }}</td>
+        <td>{{ item.stat1Value }} {{ item.stat1Element }}</td>
+        <td>{{ item.stat2Value }} {{ item.stat2Element }}</td>
+        <td>{{ item.stat3Value }} {{ item.stat3Element }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
-<table>
-  <tr>
-    <th>Price</th>
-    <th>Weapon Id</th>
-    <th>Weapon Element</th>
-    <th>Weapon Stars</th>
-    <th>stat1Value</th>
-    <th>stat2Value</th>
-    <th>stat3Value</th>
-  </tr>
-  <tr *ngFor="let item of results">
-    <td>{{item.price}}</td>
-    <td>{{item.weaponId}}</td>
-    <td>{{item.weaponElement}}</td>
-    <td>{{item.weaponStars}}</td>
-    <td>{{item.stat1Value}} {{item.stat1Element}}</td>
-    <td>{{item.stat2Value}} {{item.stat2Element}}</td>
-    <td>{{item.stat3Value}} {{item.stat3Element}}</td>
-  </tr>
-</table>
-
+<div class="floating-control">
+  <div class="floating-control__container" *ngIf="showAutoSearchField">
+    <div class="form-group" >
+      <input type="number" [(ngModel)]="minPower" name="minPower" class="form-control" placeholder="Minimum stat" />
+      <small class="form-text text-muted"
+        >Set minimum stats for auto search 5 star. <br>(every 30 seconds)</small
+      >
+    </div>
+  </div>
+  <button
+    class="btn btn-primary"
+    (click)="showAutoSearchField = !showAutoSearchField"
+  >
+    +
+  </button>
+</div>
 
 <audio #audioOption>
-  <source src='../../../assets/sounds/alert.mp3' type="audio/mp3">
+  <source
+    src="../../../assets/sounds/alert.mp3"
+    type="audio/wav"
+    muted="muted"
+  />
 </audio>
